# cecilia

./: .gitignore  CITATION.cff  LICENSE  README.md  makefile  pyproject.toml
.streamlit/: config.toml
apps/: app.py  training_instructions.md
apps/pages/: chat.py  report.py  training.py
data/: .gitignore  stats.py
data/ecured/: read_ecured.py
data/granma/: convert_granma.py  download_granma.py
data/jr/: convert_jr.py  download_jr.py
docs/: CNAME  _config.yaml  index.md
ift/lima/: test_translated.jsonl  train_translated.jsonl  translation.py
ift_tool/: extract_contexts.py  json_formatter.py  llm.py  main.py  model.py  prompts.py  pyproject.toml  requirements.txt
model/: .gitignore  makefile
models/2b/: .gitattributes
papers/cm25/: citas.md  critica.md  paper.qmd  references.bib
papers/cm25/template/: PlantillaRCM.tex  rcmart.cls  references.bib
papers/uciencia25/: before-body.tex  makefile  paper.qmd  references.bib
report/: Cecilia Tech Report.md  before-body.tex  data.md  report.md
