[project]
name = "cecilia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "libzim>=3.7.0",
    "markitdown[all]>=0.1.1",
    "pandas>=2.2.3",
    "tabulate>=0.9.0",
    "tiktoken>=0.9.0",
    "tqdm>=4.67.1",
]
