[project]
name = "cecilia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fireworks-ai>=0.17.16",
    "httpx>=0.28.1",
    "huggingface-hub[cli]>=0.32.3",
    "libzim>=3.7.0",
    "markitdown[all]>=0.1.1",
    "pandas>=2.2.3",
    "tabulate>=0.9.0",
    "tiktoken>=0.9.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "model-quantizer>=0.2.1",
]
apps = [
    "openai>=1.82.1",
    "streamlit>=1.45.1",
]
training = [
    "deep-translator>=1.11.4",
    "model-quantizer[all]>=0.2.1",
    "peft>=0.16.0",
    "tensorflow[and-cuda]>=2.19.0",
    "transformers>=4.52.4",
]
